--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
   select {
     @apply w-full px-3 py-2 bg-gray-100 border border-gray-200 rounded-lg shadow-inner;
     @apply focus:outline-none focus:ring-2 focus:ring-apple-blue focus:border-transparent;
+    @apply text-gray-900;
   }
 }
 
